# RNG-C

./: CMakeLists.txt  Main.c  README.md  resources.rc
src/: Main.c
